Changing some stuff to try to commit to gh pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": [
+      // Added this on 7/5/18 to make 'require' compile for github page deploy
+      "node"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
